--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "author": "Thomas Ridings",
   "license": "ISC",
-  "main": "app.js",
   "dependencies": {
+    "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
+    "express-prismic": "^0.3.3",
+    "express-session": "^1.12.1",
     "jade": "^1.11.0",
+    "method-override": "^2.3.5",
     "socket.io": "^1.3.7"
   },
   "repository": {
@@ -23,6 +26,5 @@
     "url": "https://github.com/Ridingst/my-story/issues"
   },
   "homepage": "https://github.com/Ridingst/my-story#readme",
-  "devDependencies": {},
-  "homepage": "https://github.com/Ridingst/my-story#readme"
+  "devDependencies": {}
 }
