--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Thomas Ridings",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.14.2",
     "cookie-parser": "^1.4.0",
+    "errorhandler": "^1.4.2",
     "express": "^4.13.3",
     "express-prismic": "^0.3.3",
     "express-session": "^1.12.1",
