--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Thomas Ridings",
   "license": "ISC",
   "dependencies": {
+    "async": "^1.5.0",
     "body-parser": "^1.14.2",
     "cookie-parser": "^1.4.0",
     "errorhandler": "^1.4.2",
